Updated asciidoc to use spring-asciidoctor-backends. Fix unit tests.

--- a/applications/processor/aggregator-processor/README.adoc
+++ b/applications/processor/aggregator-processor/README.adoc
@@ -7,7 +7,7 @@ Aggregator processor enables an application to aggregates incoming messages into
 
 Change kafka to rabbit if you want to run it against RabbitMQ.
 
-=== Payload
+== Payload
 
 If an input payload is a `byte[]` and content-type header is a JSON, then `JsonBytesToMap` function tries to deserialize this payload to a `Map` for better data representation on the output of the aggregator function.
 Also, such a `Map` data representation makes it easy to access to the payload content from SpEL expressions mentioned below.
