--- a/applications/processor/bridge-processor/README.adoc
+++ b/applications/processor/bridge-processor/README.adoc
@@ -3,7 +3,7 @@
 
 A processor that bridges the input and ouput by simply passing the incoming payload to the outbound.
 
-=== Payload
+== Payload
 
 Any
 
