--- a/applications/stream-applications-integration-tests/README.adoc
+++ b/applications/stream-applications-integration-tests/README.adoc
@@ -32,7 +32,7 @@ options. These tests use Spring but not boot currently.
 The most important setting is the image versions to test.
 To override it, set the System property, e.g.,
 
-./mvnw clean test -Dspring.cloud.stream.applications.version=3.0.0-M3
+./mvnw clean test -Dspring.cloud.stream.applications.version=4.0.0-RC1
 
 
 
