--- a/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/index.adoc
+++ b/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/index.adoc
@@ -13,11 +13,13 @@ Sabby Anandan; Artem Bilan; Marius Bogoevici; Eric Bottard; Mark Fisher; Ilayape
 
 :branch: main
 
+:stream-apps-folder: {stream-apps-root}/${branch}
+
 :stream-apps-asciidoc: https://raw.githubusercontent.com/spring-cloud/stream-applications/main/stream-applications-release-train/stream-applications-docs/src/main/asciidoc
 
-:spring-core-version: 5.3.20
+:spring-core-version: 6.0.9
 
-:scst-core-version: 3.2.0
+:scst-core-version: 4.0.3
 
 ifdef::backend-html5[]
 
