--- a/applications/source/debezium-source/README.adoc
+++ b/applications/source/debezium-source/README.adoc
@@ -1,11 +1,11 @@
 //tag::ref-doc[]
 = Debezium Source
 
-https://debezium.io/documentation/reference/2.3/development/engine.html[Debezium Engine] based https://en.wikipedia.org/wiki/Change_data_capture[Change Data Capture] (CDC) source.
+https://debezium.io/documentation/reference/development/engine.html[Debezium Engine] based https://en.wikipedia.org/wiki/Change_data_capture[Change Data Capture] (CDC) source.
 The `Debezium Source` allows *capturing* database change events and *streaming* those over different message binders such `Apache Kafka`, `RabbitMQ` and all Spring Cloud Stream supporter brokers.
 
 NOTE: This source can be used with *any* Spring Cloud  Stream message binder.
-It is not restricted nor depended on the Kafka Connect framework. Though this approach is flexible it comes with certain https://debezium.io/documentation/reference/2.3/development/engine.html#_handling_failures[limitations].
+It is not restricted nor depended on the Kafka Connect framework. Though this approach is flexible it comes with certain https://debezium.io/documentation/reference/development/engine.html#_handling_failures[limitations].
 
 All Debezium configuration properties are supported.
 Just precede any Debezium properties with the `debezium.properties.` prefix.
@@ -13,7 +13,7 @@ For example to set the Debezium's `connector.class` property use the `debezium.p
 
 == Database Support
 
-The `Debezium Source` currently supports CDC for multiple datastores: https://debezium.io/documentation/reference/2.3/connectors/mysql.html[MySQL], https://debezium.io/documentation/reference/2.3/connectors/postgresql.html[PostgreSQL], https://debezium.io/documentation/reference/2.3/connectors/mongodb.html[MongoDB], https://debezium.io/documentation/reference/2.3/connectors/oracle.html[Oracle], https://debezium.io/documentation/reference/2.3/connectors/sqlserver.html[SQL Server], https://debezium.io/documentation/reference/2.3/connectors/db2.html[Db2], https://debezium.io/documentation/reference/2.3/connectors/vitess.html[Vitess] and https://debezium.io/documentation/reference/2.3/connectors/spanner.html[Spanner] databases.
+The `Debezium Source` currently supports CDC for multiple datastores: https://debezium.io/documentation/reference/connectors/mysql.html[MySQL], https://debezium.io/documentation/reference/connectors/postgresql.html[PostgreSQL], https://debezium.io/documentation/reference/connectors/mongodb.html[MongoDB], https://debezium.io/documentation/reference/connectors/oracle.html[Oracle], https://debezium.io/documentation/reference/connectors/sqlserver.html[SQL Server], https://debezium.io/documentation/reference/connectors/db2.html[Db2], https://debezium.io/documentation/reference/connectors/vitess.html[Vitess] and https://debezium.io/documentation/reference/connectors/spanner.html[Spanner] databases.
 
 == Options
 
@@ -55,7 +55,7 @@ Using the https://debezium.io/documentation/reference/stable/transformations/eve
 
 When a Debezium source runs, it reads information from the source and periodically records `offsets` that define how much of that information it has processed.
 Should the source be restarted, it will use the last recorded offset to know where in the source information it should resume reading.
-Out of the box, the following https://debezium.io/documentation/reference/2.3/development/engine.html#engine-properties[offset storage configuration] options are provided:
+Out of the box, the following https://debezium.io/documentation/reference/development/engine.html#engine-properties[offset storage configuration] options are provided:
 
 - In-Memory
 
@@ -104,32 +104,32 @@ Those properties can be used by prefixing them by the `debezium.properties.` pre
 |===
 | Connector | Connector properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/mysql.html[MySQL]
-|https://debezium.io/documentation/reference/2.3/connectors/mysql.html#mysql-connector-properties
+|https://debezium.io/documentation/reference/connectors/mysql.html[MySQL]
+|https://debezium.io/documentation/reference/connectors/mysql.html#mysql-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/mongodb.html[MongoDB]
-|https://debezium.io/documentation/reference/2.3/connectors/mongodb.html#mongodb-connector-properties
+|https://debezium.io/documentation/reference/connectors/mongodb.html[MongoDB]
+|https://debezium.io/documentation/reference/connectors/mongodb.html#mongodb-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/postgresql.html[PostgreSQL]
-|https://debezium.io/documentation/reference/2.3/connectors/postgresql.html#postgresql-connector-properties
+|https://debezium.io/documentation/reference/connectors/postgresql.html[PostgreSQL]
+|https://debezium.io/documentation/reference/connectors/postgresql.html#postgresql-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/oracle.html[Oracle]
-|https://debezium.io/documentation/reference/2.3/connectors/oracle.html#oracle-connector-properties
+|https://debezium.io/documentation/reference/connectors/oracle.html[Oracle]
+|https://debezium.io/documentation/reference/connectors/oracle.html#oracle-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/sqlserver.html[SQL Server]
-|https://debezium.io/documentation/reference/2.3/connectors/sqlserver.html#sqlserver-connector-properties
+|https://debezium.io/documentation/reference/connectors/sqlserver.html[SQL Server]
+|https://debezium.io/documentation/reference/connectors/sqlserver.html#sqlserver-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/db2.html[DB2]
-|https://debezium.io/documentation/reference/2.3/connectors/db2.html#db2-connector-properties
+|https://debezium.io/documentation/reference/connectors/db2.html[DB2]
+|https://debezium.io/documentation/reference/connectors/db2.html#db2-connector-properties
 
-// |https://debezium.io/documentation/reference/2.3/connectors/cassandra.html[Cassandra]
-// |https://debezium.io/documentation/reference/2.3/connectors/cassandra.html#cassandra-connector-properties
+// |https://debezium.io/documentation/reference/connectors/cassandra.html[Cassandra]
+// |https://debezium.io/documentation/reference/connectors/cassandra.html#cassandra-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/vitess.html[Vitess]
-|https://debezium.io/documentation/reference/2.3/connectors/vitess.html#vitess-connector-properties
+|https://debezium.io/documentation/reference/connectors/vitess.html[Vitess]
+|https://debezium.io/documentation/reference/connectors/vitess.html#vitess-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/spanner.html[Spanner]
-|https://debezium.io/documentation/reference/2.3/connectors/spanner.html#spanner-connector-properties
+|https://debezium.io/documentation/reference/connectors/spanner.html[Spanner]
+|https://debezium.io/documentation/reference/connectors/spanner.html#spanner-connector-properties
 
 |===
 
@@ -192,7 +192,7 @@ debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffset
 <2> Metadata used to identify and dispatch the incoming events.
 <3> Connection to the MySQL server running on `localhost:3306` as `debezium` user.
 <4> Includes the https://debezium.io/docs/connectors/mysql/#change-events-value[Change Event Value] schema in the `ChangeEvent` message.
-<5> Enables the https://debezium.io/documentation/reference/2.3/transformations/event-flattening.html[Change Event Flattening].
+<5> Enables the https://debezium.io/documentation/reference/transformations/event-flattening.html[Change Event Flattening].
 <6> Source state to preserver between multiple starts.
 
 You can run also the `DebeziumDatabasesIntegrationTest#mysql()` using this mysql configuration.
