--- a/functions/common/debezium-autoconfigure/README.adoc
+++ b/functions/common/debezium-autoconfigure/README.adoc
@@ -1,9 +1,9 @@
 = Debezium Auto-Configuration
 
-This module provides a generic https://debezium.io/documentation/reference/2.3/development/engine.html[DebeziumEngine.Builder] auto-configuration that can be reused and composed in other applications.
+This module provides a generic https://debezium.io/documentation/reference/development/engine.html[DebeziumEngine.Builder] auto-configuration that can be reused and composed in other applications.
 
 IMPORTANT: The `DebeziumEngine` does not required Kafka or Kafka Connect as it runs embedded inside your application.
-This approach though comes with some delivery guarantee limitations as explained https://debezium.io/documentation/reference/2.3/development/engine.html#%5Fhandling_failures[here].
+This approach though comes with some delivery guarantee limitations as explained https://debezium.io/documentation/reference/development/engine.html#%5Fhandling_failures[here].
 
 The `Debezium Engine` is a https://en.wikipedia.org/wiki/Change_data_capture[Change Data Capture] (CDC) utility, that allows *capturing* database change events and process them with custom `java.util.Consumer` or `io.debezium.engine.ChangeConsumer` event handler implementations.
 
@@ -36,7 +36,7 @@ compile "org.springframework.cloud.fn:debezium-autoconfigure:{project-version}"
 ----
 ====
 
-and include the https://debezium.io/documentation/reference/2.3/connectors/index.html[debezium connector] dependency for the selected Database.
+and include the https://debezium.io/documentation/reference/connectors/index.html[debezium connector] dependency for the selected Database.
 For example the postgres debezium connector dependency looks like this:
 
 ====
@@ -178,29 +178,29 @@ The table below lists all available Debezium properties for each connecter.
 |===
 | Connector | Connector properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/mysql.html[MySQL]
-|https://debezium.io/documentation/reference/2.3/connectors/mysql.html#mysql-connector-properties
+|https://debezium.io/documentation/reference/reference/connectors/mysql.html[MySQL]
+|https://debezium.io/documentation/reference/connectors/mysql.html#mysql-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/mongodb.html[MongoDB]
-|https://debezium.io/documentation/reference/2.3/connectors/mongodb.html#mongodb-connector-properties
+|https://debezium.io/documentation/reference/connectors/mongodb.html[MongoDB]
+|https://debezium.io/documentation/reference/connectors/mongodb.html#mongodb-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/postgresql.html[PostgreSQL]
-|https://debezium.io/documentation/reference/2.3/connectors/postgresql.html#postgresql-connector-properties
+|https://debezium.io/documentation/reference/connectors/postgresql.html[PostgreSQL]
+|https://debezium.io/documentation/reference/connectors/postgresql.html#postgresql-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/oracle.html[Oracle]
-|https://debezium.io/documentation/reference/2.3/connectors/oracle.html#oracle-connector-properties
+|https://debezium.io/documentation/reference/connectors/oracle.html[Oracle]
+|https://debezium.io/documentation/reference/connectors/oracle.html#oracle-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/sqlserver.html[SQL Server]
-|https://debezium.io/documentation/reference/2.3/connectors/sqlserver.html#sqlserver-connector-properties
+|https://debezium.io/documentation/reference/connectors/sqlserver.html[SQL Server]
+|https://debezium.io/documentation/reference/connectors/sqlserver.html#sqlserver-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/db2.html[DB2]
-|https://debezium.io/documentation/reference/2.3/connectors/db2.html#db2-connector-properties
+|https://debezium.io/documentation/reference/connectors/db2.html[DB2]
+|https://debezium.io/documentation/reference/connectors/db2.html#db2-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/vitess.html[Vitess]
-|https://debezium.io/documentation/reference/2.3/connectors/vitess.html#vitess-connector-properties
+|https://debezium.io/documentation/reference/connectors/vitess.html[Vitess]
+|https://debezium.io/documentation/reference/connectors/vitess.html#vitess-connector-properties
 
-|https://debezium.io/documentation/reference/2.3/connectors/spanner.html[Spanner]
-|https://debezium.io/documentation/reference/2.3/connectors/spanner.html#spanner-connector-properties
+|https://debezium.io/documentation/reference/connectors/spanner.html[Spanner]
+|https://debezium.io/documentation/reference/connectors/spanner.html#spanner-connector-properties
 
 |===
 
@@ -287,7 +287,7 @@ Follow the https://debezium.io/documentation/reference/stable/transformations/ev
 
 When a Debezium source runs, it reads information from the source and periodically records `offsets` that define how much of that information it has processed.
 Should the source be restarted, it will use the last recorded offset to know where in the source information it should resume reading.
-Out of the box, the following https://debezium.io/documentation/reference/2.3/development/engine.html#engine-properties[offset storage configuration] options are provided:
+Out of the box, the following https://debezium.io/documentation/reference/development/engine.html#engine-properties[offset storage configuration] options are provided:
 
 ==== In-Memory
 
